--- a/style.css
+++ b/style.css
@@ -5,6 +5,64 @@ body{
     margin-top: 7%;
 }
 
+header {
+    position: fixed;
+    z-index: 1000;
+    background-color: #EFD6AC;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    column-gap: 50px;
+    align-items: center;
+}
+
+
+#hero {
+    position: relative;
+    width: 100%;
+    height: 600px;
+    overflow: hidden;
+    }
+
+#hero_bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('imgs/Bicycle mechanic.jpg');
+    background-size: cover;
+    background-position: center;
+    filter: blur(8px);
+    z-index: 1;
+}
+
+#hero_content{
+    position: relative;
+    z-index: 2;
+    text-align: left;
+}
+
+#bicycles{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #183A37;
+    color: #EFD6AC;
+}
+
+#motorcyles{
+
+}
+
+#contact_page{
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    color: #183A37;
+}
+
 #logo{
     width: 7%;
 }
@@ -21,30 +79,12 @@ body{
 .nav_button:hover{
     color: #C44900;
 }
- 
-header {
-    position: fixed;
-    z-index: 1000;
-    background-color: #EFD6AC;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    column-gap: 50px;
-    align-items: center;
-  }
 
 hr.style-one {
     border: 0;
     height: 3px;
     background: #333;
     background-image: linear-gradient(to right, #efd6ac, #183a37, #efd6ac);
-}
-
-#contact_page{
-    display: flex;
-    justify-content: center;
-    align-items: start;
 }
 
 #contact_info{
@@ -64,8 +104,7 @@ hr.style-one {
 }
 
 .section_heading{
-    text-decoration: underline;
-    color: #183A37;
+    text-decoration: none;
     font-family: 'Fugaz One';
     font-weight: bold;
     font-size: 300%;
@@ -159,8 +198,9 @@ hr.style-one {
     transform: scale(1.1);
 }
 
-#home{
-    background-image: url('imgs/Bicycle mechanic.jpg');
-    height: 400px;
-    box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.5);
+#hero_text{
+    color: #432534;
+    font-family: "Fugaz One";
+    padding: 50px;
+
 }
