--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ header {
     left: 0;
     width: 100%;
     display: flex;
-    column-gap: 50px;
+    column-gap: 5%;
     align-items: center;
+    height: 15%;
 }
 
 #hero {
@@ -77,7 +78,7 @@ header {
 }
 
 #logo{
-    width: 7%;
+    height: 100%;
 }
 
 .nav_button{
@@ -226,8 +227,12 @@ hr.style-one {
     background-color: #183A37;
     color: white;
     padding: 10px;
+    padding-left: 50px;
     transition: all 0.2s ease-in-out;
     margin: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .button:hover{
@@ -284,4 +289,8 @@ hr.style-one {
     font-family: 'Fugaz One';
     font-size: 100%;
     color: #C44900;
+}
+
+#submit_icon{
+    padding-left: 15px;
 }
