--- a/style.css
+++ b/style.css
@@ -22,6 +22,25 @@ header {
     height: 15%;
 }
 
+#navbar{
+    display: flex;
+    align-items: center;
+    column-gap: 5%;
+    list-style: none;
+}
+
+@media (max-width: 768px) {
+    header {
+        height: 25%;
+    }
+  }
+
+@media (max-width: 768px) {
+    #navbar {
+      flex-direction: column;
+    }
+  }
+
 #hero {
     position: relative;
     width: 100%;
@@ -30,8 +49,6 @@ header {
 
 #hero_bg{
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     background-image: url('imgs/Bicycle mechanic.jpg');
@@ -45,7 +62,6 @@ header {
     position: relative;
     width: 50%;
     z-index: 2;
-    text-align: left;
     display: flex;
     flex-direction: column;
     justify-content: start;
