--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ header {
     font-family: 'Fugaz One';
     font-weight: bold;
     transition: 0.3s ease-in-out;
-    font-size: 30px;
+    font-size: 200%;
 }
 
 .nav_button:hover{
