--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
-html{
-    scroll-padding-top: 25%;
+:root{
+    scroll-padding-top: 15vh;
 }
 
 body{
     background-color: #EFD6AC;
     margin: 0;
     padding: 0;
-    margin-top: 7%;
 }
 
 header {
@@ -19,7 +18,7 @@ header {
     display: flex;
     column-gap: 5%;
     align-items: center;
-    height: 15%;
+    height: 15vh;
 }
 
 #navbar{
@@ -33,6 +32,7 @@ header {
     position: relative;
     width: 100%;
     height: 600px;
+    margin-top: 15vh;
 }
 
 #hero_bg{
