--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* TOP LEVEL */
 :root{
     scroll-padding-top: 15vh;
 }
@@ -16,16 +17,15 @@ header {
     left: 0;
     width: 100%;
     display: flex;
-    column-gap: 5%;
     align-items: center;
     height: 15vh;
 }
 
 #navbar{
     display: flex;
-    align-items: center;
-    column-gap: 5%;
+    column-gap: 10%;
     list-style: none;
+    flex-wrap: nowrap;
 }
 
 #hero {
@@ -86,7 +86,7 @@ header {
 }
 
 #logo{
-    height: 100%;
+    height: 15vh;
 }
 
 .nav_button{
@@ -95,7 +95,7 @@ header {
     font-family: 'Fugaz One';
     font-weight: bold;
     transition: 0.3s ease-in-out;
-    font-size: 200%;
+    font-size: 250%;
 }
 
 .nav_button:hover{
@@ -168,11 +168,6 @@ hr.style-one {
     justify-content: center;
 }
 
-.footer{
-    display: flex;
-    justify-content: center;
-}
-
 .label_and_content{
     display: flex;
     justify-content: center;
@@ -192,10 +187,6 @@ hr.style-one {
     text-decoration: none;
 }
 
-#credits{
-    justify-items: start;
-}
-
 .credit{
     text-decoration: none;
     font-family: 'Fugaz One';
@@ -203,15 +194,13 @@ hr.style-one {
     color: #183A37;
 }
 
-.img_link{
-    display: contents;
+#credits{
+    text-align: center;
+    list-style: none;
 }
 
-#contact_form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
+.img_link{
+    display: contents;
 }
 
 .contact_input{
@@ -337,31 +326,27 @@ hr.style-one {
 }
 
 @media (max-width: 1000px){
-    :root{
-        scroll-padding-top: 25vh;
-    }
-  }
-
-@media (max-width: 1000px) {
     header{
-        height: 25vh;
+        height: 15vh;
     }
-  }
 
-@media (max-width: 1000px) {
     #navbar{
-      flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: center;
     }
-  }
 
-  @media (max-width: 1000px) {
+    #navbar li {
+        width: 30%;
+        text-align: center;
+        margin-inline: 5%;
+        margin: 3%;
+    }
+
     #hero{
-      margin-top: 25vh;
+      margin-top: 15vh;
     }
-  }
 
-  @media (max-width: 1000px) {
     #contact_confirmation_page{
         margin-top: 35vh;
     }
-  }
+}
